prophet uebert angel

--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
 </head>
 <body class="bg-blue-50">
   <!-- Header -->
-  <header class="bg-blue-600 shadow">
+  <header class="bg-azure-600 shadow">
     <div class="container mx-auto px-4 py-6 flex justify-between items-center">
       <h1 class="text-2xl font-bold text-white text-shadow wow animate__animated animate__fadeInDown">Mensah Right Vibe</h1>
       <nav>
         <ul class="flex space-x-6">
-          <li><a href="#features" class="text-white hover:text-blue-300 text-shadow wow animate__animated animate__fadeInDown">Features</a></li>
-          <li><a href="#screenshots" class="text-white hover:text-blue-300 text-shadow wow animate__animated animate__fadeInDown" data-wow-delay="0.2s">Screenshots</a></li>
-          <li><a href="#download" class="text-white hover:text-blue-300 text-shadow wow animate__animated animate__fadeInDown" data-wow-delay="0.4s">Download</a></li>
+          <li><a href="#features" class="text-white hover:text-azure-300 text-shadow wow animate__animated animate__fadeInDown">Features</a></li>
+          <li><a href="#screenshots" class="text-white hover:text-azure-300 text-shadow wow animate__animated animate__fadeInDown" data-wow-delay="0.2s">Screenshots</a></li>
+          <li><a href="#download" class="text-white hover:text-azure-300 text-shadow wow animate__animated animate__fadeInDown" data-wow-delay="0.4s">Download</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
   <!-- Hero Section -->
-  <section class="bg-gradient-to-r from-blue-500 to-blue-700 text-white py-20">
+  <section class="bg-gradient-to-r from-azure-500 to-azure-700 text-white py-20">
     <div class="container mx-auto px-4 text-center">
       <h2 class="text-4xl font-bold mb-4 text-shadow wow animate__animated animate__fadeInUp">Find Your Right Vibe with Mensah</h2>
       <p class="text-lg mb-8 text-shadow wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">Play soothing melodies, track your time, and get reminders to take breaks for a productive and relaxing work session.</p>
-      <a href="#download" class="bg-white text-blue-600 py-3 px-6 rounded-full font-semibold hover:bg-gray-100 text-shadow wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">Get Started</a>
+      <a href="#download" class="bg-white text-azure-600 py-3 px-6 rounded-full font-semibold hover:bg-gray-100 text-shadow wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">Get Started</a>
     </div>
   </section>
 
@@ -47,15 +47,15 @@
       <h3 class="text-3xl font-bold text-gray-800 mb-12 text-shadow wow animate__animated animate__fadeInUp">Features</h3>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
         <div class="bg-white p-6 rounded-lg shadow wow animate__animated animate__fadeInUp">
-          <h4 class="text-2xl font-bold text-blue-600 mb-4 text-shadow">Relaxing Melodies</h4>
+          <h4 class="text-2xl font-bold text-azure-600 mb-4 text-shadow">Relaxing Melodies</h4>
           <p class="text-gray-600">Enjoy a selection of calming melodies that help you focus and relax while working.</p>
         </div>
         <div class="bg-white p-6 rounded-lg shadow wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">
-          <h4 class="text-2xl font-bold text-blue-600 mb-4 text-shadow">Time Tracking</h4>
+          <h4 class="text-2xl font-bold text-azure-600 mb-4 text-shadow">Time Tracking</h4>
           <p class="text-gray-600">Keep track of how long you’ve been working with audio reminders to take breaks.</p>
         </div>
         <div class="bg-white p-6 rounded-lg shadow wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
-          <h4 class="text-2xl font-bold text-blue-600 mb-4 text-shadow">Break Reminders</h4>
+          <h4 class="text-2xl font-bold text-azure-600 mb-4 text-shadow">Break Reminders</h4>
           <p class="text-gray-600">Receive gentle reminders to take breaks and refresh your mind for better productivity.</p>
         </div>
       </div>
@@ -75,20 +75,20 @@
   </section>
 
   <!-- Download Section -->
-  <section id="download" class="bg-gradient-to-r from-blue-500 to-blue-700 text-white py-20">
+  <section id="download" class="bg-gradient-to-r from-azure-500 to-azure-700 text-white py-20">
     <div class="container mx-auto px-4 text-center">
       <h3 class="text-3xl font-bold mb-4 text-shadow wow animate__animated animate__fadeInUp">Download Mensah Right Vibe</h3>
       <p class="text-lg mb-8 text-shadow wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">Available for all major platforms. Download now to enhance your work environment!</p>
       <div class="flex justify-center space-x-4">
-        <a href="#" class="bg-white text-blue-600 py-3 px-6 rounded-full font-semibold hover:bg-gray-100 flex items-center space-x-2 text-shadow wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
+        <a href="#" class="bg-white text-azure-600 py-3 px-6 rounded-full font-semibold hover:bg-gray-100 flex items-center space-x-2 text-shadow wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
           <i class="fab fa-apple"></i>
           <span>Download for iOS</span>
         </a>
-        <a href="#" class="bg-white text-blue-600 py-3 px-6 rounded-full font-semibold hover:bg-gray-100 flex items-center space-x-2 text-shadow wow animate__animated animate__fadeInUp" data-wow-delay="0.6s">
+        <a href="#" class="bg-white text-azure-600 py-3 px-6 rounded-full font-semibold hover:bg-gray-100 flex items-center space-x-2 text-shadow wow animate__animated animate__fadeInUp" data-wow-delay="0.6s">
           <i class="fab fa-android"></i>
           <span>Download for Android</span>
         </a>
-        <a href="#" class="bg-white text-blue-600 py-3 px-6 rounded-full font-semibold hover:bg-gray-100 flex items-center space-x-2 text-shadow wow animate__animated animate__fadeInUp" data-wow-delay="0.8s">
+        <a href="#" class="bg-white text-azure-600 py-3 px-6 rounded-full font-semibold hover:bg-gray-100 flex items-center space-x-2 text-shadow wow animate__animated animate__fadeInUp" data-wow-delay="0.8s">
           <i class="fab fa-windows"></i>
           <span>Download for Windows</span>
         </a>
@@ -97,7 +97,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-blue-600 text-white py-6">
+  <footer class="bg-azure-600 text-white py-6">
     <div class="container mx-auto px-4 text-center">
       <p class="text-shadow">&copy; 2024 Mensah Right Vibe. All rights reserved.</p>
     </div>
